# calling_function_within_crates

callingFuncBWcrates/program1/: Cargo.toml
callingFuncBWcrates/program1/src/: main.rs
callingFuncBWcrates/program2/: Cargo.toml
callingFuncBWcrates/program2/src/: main.rs
callingFuncBWcrates/proj/: Cargo.toml
callingFuncBWcrates/proj/src/: lib.rs
callingFuncBWcrates/proj2/: Cargo.toml
callingFuncBWcrates/proj2/src/: lib.rs
rust_ns/hello/: Cargo.toml  bindings.h  build.rs
rust_ns/hello/src/: .lib.rs.swp  lib.rs
rustbook/app/: Cargo.toml
trustzonetest-master/multilang_link/: build.sh  link.x  startup.S  test.c  test.elf  test.h
trustzonetest-master/multilang_link/hello/: Cargo.toml  bindings.h  build.rs
trustzonetest-master/multilang_link/hello/.cargo/: config
trustzonetest-master/multilang_link/hello/src/: .lib.rs.swp  lib.rs
