[package]
name = "hello_ns"
version = "0.1.0"
authors = ["Ankita Kumari <ankitarkr19@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
hello = {path = "../../trustzonetest-master/multilang_link/hello"}

[build-dependencies]
cbindgen = "0.14.3"
cc = "1.0"

[profile.release]
panic = 'abort'
